--- a/Entrepaginas/src/main/resources/templates/usuarios.html
+++ b/Entrepaginas/src/main/resources/templates/usuarios.html
@@ -138,7 +138,7 @@
             <a th:href="@{/categorias}"  class="hover:underline">Categorías</a>
             <a th:href="@{/prestamos}"  class="hover:underline">Préstamos</a>
             <a th:href="@{/perfiles}" class="hover:underline">Perfiles</a>
-            <a th:href="@{/catalogo}" class="hover:underline">Catálogo</a>
+            <a th:href="@{/catalogos}" class="hover:underline">Catálogo</a>
             <a th:href="@{/logout}" class="hover:underline">Cerrar Sesión</a>
         </div>
     </div>
