--- a/Entrepaginas/src/main/resources/templates/perfiles.html
+++ b/Entrepaginas/src/main/resources/templates/perfiles.html
@@ -139,7 +139,7 @@
             <a th:href="@{/categorias}" >Categorías</a>
             <a th:href="@{/prestamos}" >Préstamos</a>
             <a th:href="@{/perfiles}" >Perfiles</a>
-            <a th:href="@{/catalogo}" class="hover:underline">Catálogo</a>
+            <a th:href="@{/catalogos}" class="hover:underline">Catálogo</a>
             <a th:href="@{/logout}" class="hover:underline">Cerrar Sesión</a>
         </div>
     </div>
